# jawn-vault

./: .gitignore  Cargo.toml  README.md  REVIEW.md  ROADMAP.md
clients/node/: package.json
clients/node/src/: index.ts
clients/node/src/test/: client.test.ts
clients/python/: pyproject.toml
clients/python/jawn_vault/: __init__.py
clients/python/tests/: test_client.py
deploy/: config.example.toml  jawn-vault.service
docs/: index.html
scripts/: setup.sh
src/: cli.rs  config.rs  lib.rs  main.rs  protocol.rs
src/alerting/: mod.rs
src/audit/: mod.rs
src/auth/: mod.rs
src/backend/: mod.rs  pass.rs
src/cache/: mod.rs
src/rotation/: google.rs  http.rs  mod.rs  scheduler.rs  slack.rs
src/server/: mod.rs
